--- a/src/_includes/postlist.html
+++ b/src/_includes/postlist.html
@@ -1,13 +1,9 @@
 <ul>
-    {% for post in postslist %}
+    {% for post in postlist %}
         <li>
             <strong>
                 <a href="{{ post.url | url }}">{{ post.data.title }}</a>
             </strong>
-            -
-            <span>
-                {{ post.data.description }}
-            </span>
         </li>
     {% endfor %}
 </ul>
