--- a/src/_includes/postlist.html
+++ b/src/_includes/postlist.html
@@ -1,9 +1,10 @@
 <ul>
-    {% for post in postlist %}
-        <li>
-            <strong>
-                <a href="{{ post.url | url }}">{{ post.data.title }}</a>
-            </strong>
-        </li>
-    {% endfor %}
+  {% for post in postlist %}
+  <li>
+    <strong>
+      <a href="{{ post.url | url }}">{{ post.data.title }}</a>
+    </strong>
+    <span> {{post.description}} </span>
+  </li>
+  {% endfor %}
 </ul>
